fix alignment of main editor area

--- a/src/styles/components/editor.scss
+++ b/src/styles/components/editor.scss
@@ -29,7 +29,7 @@
 
   &.ProseMirror {
 
-    @apply px-32;
+    @apply px-28;
 
 
     p:first-child:last-child {
